@@ -3,6 +3,7 @@
 - use _dir_perms and _file_perms properties at file creation
 - new constant SMARTY_RESOURCE_DATE_FORMAT (default '%b %e, %Y') which is used as default format in modifier date_format
 - added {foreach $array as $key=>$value} syntax
+- renamed extend tag and resource to extens: {extends file='foo.tol'} , $smarty->display('extends:foo.tpl|bar.tpl);
 
 11/15/2009
 - lexer/parser optimizations on quoted strings
